--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             iframe.src = "https://vidsrc.net/embed/movie?tmdb=1022789"; // Gunakan URL default
         }
     </script>
+<script type='text/javascript' src='//tolerancewarily.com/72/71/4a/72714aab3568f73a8e4d02361e12330b.js'></script>
  <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4989558,4,0,0,0,00010000']);
@@ -85,3 +86,4 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <!-- Histats.com  END  -->
 </body>
 </html>
+
